--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
